--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,20 @@
     width: 350px; 
 
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  
+  body {
+    margin-bottom: 120px; 
+  }
+  
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px !important; 
+  }
+  
