--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
   </head>
+  <style>
+
+
+  </style>
   <body>
     <main>
     <!-- Including navbar -->
@@ -20,6 +24,18 @@
     </div>
     <br>
   </main>
+
+  <footer class="footer mt-auto py-2 bg-body-tertiary">
+    <div class="container container-footer">
+      <ul class="nav justify-content-center border-bottom pb-1 mb-1">
+        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">&copy; 2024 Flask-Todo ❤️‍🔥</p>
+    </div>
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
