--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,10 @@
             </li>
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('todo')}}">Todo 📝</a>
+                <a class="nav-link active" href="{{url_for('todos')}}">Todo 📃</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="{{url_for('add_todo')}}"> Add Todo 📝</a>
               </li>
             <li class="nav-item">
                 <a class="btn btn-danger" href="{{url_for('logout')}}">Logout </a>
