--- a/templates/todos.html
+++ b/templates/todos.html
@@ -3,33 +3,20 @@
 {% block content %}
 
 {% for message in get_flashed_messages() %}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {% if 'delete' not in message %}
-            <strong>Hey {{name}} - {{ message }}</strong>
-        {% else %}
-            <strong>{{ message }}</strong>
-        {% endif %}
+    {% if 'delete' in message %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    {% elif 'update' in message %}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {% else %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+    {% endif %}
+        <strong>{{ message }}</strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endfor %}
 
-    <div class="container d-flex justify-content-center align-items-center">
-        <div>
-            <h1 class="text-center">Todo List</h1>
-            <form method="POST">
-                {{ form.hidden_tag() }}
-                <div class="mb-3">
-                    {{ form.title.label }}
-                    {{ form.title(class="form-control", size=32) }}
-                    {% for error in form.title.errors %}
-                        <span style="color: red;">{{ error }}</span><br>
-                    {% endfor %}
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary add-todo-btn">Add Todo</button>
-                </div>
-            </form>
-
+<div class="container d-flex justify-content-center align-items-center">
+    <div>
             <ul class="list-group mt-3">
                 {% for todo in todos %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
