--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,20 @@ html {
     height: 100px !important; 
   }
   
+.list-group-item {
+    border-top-width: 1px !important;
+}
+
+.list-group-item:last-child {
+  border-bottom-right-radius: 1% !important; 
+  border-bottom-left-radius: 1% !important;
+}
+
+.list-group-item:first-child {
+  border-top-left-radius: 1% !important;
+  border-top-right-radius: 1% !important;
+}
+
+.list-group-item {
+  border-top-width: 1px !important;
+}
