--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
 {% endfor %}
 
     <h1>Welcome to Your Todo List Application</h1>
+    {% if current_user.is_authenticated %}
+    <a class="btn btn-primary" href="{{url_for('todos')}}">Todos</a>
+    {% else %}
     <p><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a></p>
-
+    {% endif %}
 {% endblock %}
