--- a/templates/login.html
+++ b/templates/login.html
@@ -38,8 +38,9 @@
                     {% endfor %}
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-lg btn-primary py-2" type="submit">Sign in</button>
+                    <button class="btn btn-md btn-primary py-2" type="submit">Sign in</button>
                 </div>
+                <p class="mt-3">You don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
             </form>
         </div>
     </div>
