--- a/templates/todos.html
+++ b/templates/todos.html
@@ -17,7 +17,8 @@
 
 <div class="container d-flex justify-content-center align-items-center">
     <div>
-            <ul class="list-group mt-3">
+    <p class="text-center">TODO'S</p>
+            <ul class="list-group mt-3 gap-2">
                 {% for todo in todos %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         {{ todo.title }}
