--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,3 +43,20 @@ html {
 .list-group-item {
   border-top-width: 1px !important;
 }
+
+
+.btn-1 {
+    background: rgb(6,14,131);
+    background: linear-gradient(0deg, rgba(6,14,131,1) 0%, rgba(12,25,180,1) 100%);
+    border: none;
+}
+.btn-1:hover {
+    background: rgb(0,3,255);
+    background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
+}
+
+
+/* Todos border */
+.todo_border{
+      border: 1px solid #4dccc6 !important;
+}
