--- a/templates/add_todo.html
+++ b/templates/add_todo.html
@@ -28,7 +28,30 @@
                     {% endfor %}
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary add-todo-btn">Add Todo</button>
+                    <button type="submit" class="bubbly-button add-todo-btn">Add Todo</button>
                 </div>
             </form>
+        
+
+    <script>
+        var animateButton = function(e) {
+
+            e.preventDefault;
+            //reset animation
+            e.target.classList.remove('animate');
+
+            e.target.classList.add('animate');
+            setTimeout(function(){
+            e.target.classList.remove('animate');
+            },700);
+            };
+
+            var bubblyButtons = document.getElementsByClassName("bubbly-button");
+
+            for (var i = 0; i < bubblyButtons.length; i++) {
+            bubblyButtons[i].addEventListener('click', animateButton, false);
+            }
+    </script>
+            
             {% endblock %}
+
