--- a/templates/index.html
+++ b/templates/index.html
@@ -33,5 +33,8 @@
 
         </div>
         </div>
+        <div class="plus-button-container">
+            <a href="{{ url_for('add_todo') }}" class="btn plus-button"><i class="bi bi-plus-lg"></i></a>
+        </div>
 
 {% endblock %}
