--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/add_button.css')}}">
 
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   </head>
   <style>
 
@@ -30,9 +33,9 @@
   <footer class="footer mt-auto py-2 bg-body-tertiary">
     <div class="container container-footer">
       <ul class="nav justify-content-center border-bottom pb-1 mb-1">
-        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-4 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="{{ url_for('index')}}" class="nav-link px-4 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="{{ url_for('faq')}}" class="nav-link px-4 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="{{ url_for('about')}}" class="nav-link px-4 text-body-secondary">About</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2024 Flask-Todo ❤️‍🔥</p>
     </div>
