--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/add_button.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/check_box.css')}}">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Animate css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 
   </head>
   <style>
@@ -33,11 +40,11 @@
   <footer class="footer mt-auto py-2 bg-body-tertiary">
     <div class="container container-footer">
       <ul class="nav justify-content-center border-bottom pb-1 mb-1">
-        <li class="nav-item"><a href="{{ url_for('index')}}" class="nav-link px-4 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="{{ url_for('faq')}}" class="nav-link px-4 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="{{ url_for('about')}}" class="nav-link px-4 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="{{ url_for('index')}}" class="nav-link px-4 text-light">Home</a></li>
+        <li class="nav-item"><a href="{{ url_for('faq')}}" class="nav-link px-4 text-light">FAQs</a></li>
+        <li class="nav-item"><a href="{{ url_for('about')}}" class="nav-link px-4 text-light">About</a></li>
       </ul>
-      <p class="text-center text-body-secondary">&copy; 2024 Flask-Todo ❤️‍🔥</p>
+      <p class="text-center text-light">&copy; 2024 Flask-Todo ❤️‍🔥</p>
     </div>
   </footer>
 
