--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
                     {% endfor %}
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-md  py-2" type="submit">Sign in</button>
+                    <button class="btn btn-md btn-1 py-2" type="submit">Sign in</button>
                 </div>
                 <p class="mt-3">You don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
             </form>
