--- a/templates/register.html
+++ b/templates/register.html
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button class="btn btn-primary py-2" type="submit">Sign in</button>
+                        <button class="btn btn-md btn-1 py-2" type="submit">Sign in</button>
                     </div>
                     <p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
 
