--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 
 {% block content %}
 
@@ -20,7 +20,7 @@
             <div class="text-center">
                 <img class="mb-4" src="{{ url_for('static',filename='images/default.png')}}" alt="" width="80" height="80">
             </div>
-            <form method="POST" class="form-signin d-flex flex-column align-items-center">
+            <form method="POST" class="form-signin d-flex flex-column align-items-center" action="{{url_for('auth.login')}}">
                 {{ form.hidden_tag() }}
                 
                 <div class="mb-3">
@@ -40,7 +40,7 @@
                 <div class="text-center">
                     <button class="btn btn-md btn-1 py-2" type="submit">Sign in</button>
                 </div>
-                <p class="mt-3">You don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
+                <p class="mt-3">You don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
             </form>
         </div>
     </div>
