--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 
 {% block content %}
 
@@ -17,7 +17,7 @@
         <div class="row justify-content-center">
             <h1 class="h3 mb-3 text-center">Create Account</h1>
             <div class="col-md-6">
-                <form method="POST" class="form-signin d-flex flex-column align-items-center">
+                <form method="POST" class="form-signin d-flex flex-column align-items-center" action="{{url_for('auth.register')}}">
                     {{ form.hidden_tag() }}
 
                     <div class="mb-3">
@@ -47,7 +47,7 @@
                     <div class="text-center">
                         <button class="btn btn-md btn-1 py-2" type="submit">Sign in</button>
                     </div>
-                    <p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+                    <p class="mt-3">Already have an account? <a href="{{ url_for('auth.login') }}">Login</a></p>
 
                 </form>
             </div>
