--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/add_button.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/check_box.css')}}">
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -26,7 +25,7 @@
   <body>
     <main>
     <!-- Including navbar -->
-    {%include 'navbar.html' %}
+    {%include 'main/navbar.html' %}
     <br>
 
     <div class="container">
@@ -40,9 +39,9 @@
   <footer class="footer mt-auto py-2 bg-body-tertiary">
     <div class="container container-footer">
       <ul class="nav justify-content-center border-bottom pb-1 mb-1">
-        <li class="nav-item"><a href="{{ url_for('index')}}" class="nav-link px-4 text-light">Home</a></li>
-        <li class="nav-item"><a href="{{ url_for('faq')}}" class="nav-link px-4 text-light">FAQs</a></li>
-        <li class="nav-item"><a href="{{ url_for('about')}}" class="nav-link px-4 text-light">About</a></li>
+        <li class="nav-item"><a href="{{ url_for('main.index')}}" class="nav-link px-4 text-light">Home</a></li>
+        <li class="nav-item"><a href="{{ url_for('main.faq')}}" class="nav-link px-4 text-light">FAQs</a></li>
+        <li class="nav-item"><a href="{{ url_for('main.about')}}" class="nav-link px-4 text-light">About</a></li>
       </ul>
       <p class="text-center text-light">&copy; 2024 Flask-Todo ❤️‍🔥</p>
     </div>
