--- a/app/templates/main/add_todo.html
+++ b/app/templates/main/add_todo.html
@@ -38,7 +38,10 @@
                         <option value="low">Low</option>
                     </select>
                 </div>
-
+                <div class="mb-3">
+                    {{ form.due_date.label }}
+                    {{ form.due_date(class="form-control") }}
+                </div>
                 <div class="text-center">
                     <button type="submit" class="bubbly-button add-todo-btn">Add Todo</button>
                 </div>
