Added notes feature

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -25,6 +25,7 @@
             {% if current_user.is_authenticated %}
             <div class="d-inline-flex gap-2 mb-5">
                 <a class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" href="{{url_for('main.todos')}}">Todos</a>
+                <a class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" href="{{url_for('note.notes')}}">Notes</a>
                 {% else %}
                 <a class="btn btn-1" href="{{ url_for('auth.login') }}">Login</a>
                 <a class="btn btn-1" href="{{ url_for('auth.register') }}">Register</a>
@@ -33,10 +34,10 @@
 
         </div>
         </div>
-        {% if current_user.is_authenticated%}
+        <!-- {% if current_user.is_authenticated%}
         <div class="plus-button-container">
             <a href="{{ url_for('main.add_todo') }}" class="btn plus-button"><i class="bi bi-plus-lg"></i></a>
         </div>
-        {% endif %}
+        {% endif %} -->
 
 {% endblock %}
