--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,7 +5,7 @@
 {% for message in get_flashed_messages() %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         {% if 'delete' not in message %}
-            <strong>Hey {{name}} - {{ message }}</strong>
+            <strong>Hey {{ message }}</strong>
         {% else %}
             <strong>{{ message }}</strong>
         {% endif %}
