--- a/app/templates/main/navbar.html
+++ b/app/templates/main/navbar.html
@@ -23,6 +23,12 @@
               <li class="nav-item">
                 <a class="nav-link active" href="{{url_for('main.add_todo')}}"> Add Todo 📝</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="{{url_for('note.notes')}}">Notes </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="{{url_for('note.add_note')}}">Add Notes </a>
+              </li>
             <li class="nav-item">
                 <a class="btn btn-danger" href="{{url_for('auth.logout')}}">Logout </a>
               </li>
