Modified todo blueprint

--- a/app/templates/todo/todos.html
+++ b/app/templates/todo/todos.html
@@ -34,17 +34,17 @@
                 <span class="todo-title">{{ todo.title }}</span>
 
                 <div class="btn-group">
-                    <form method="POST" action="{{ url_for('main.complete_todo', todo_id=todo.id) }}">
+                    <form method="POST" action="{{ url_for('todo.complete_todo', todo_id=todo.id) }}">
                         <div class="form-check mt-1">
                             <input class="form-check-input" type="checkbox" name="completed" id="completeCheck{{ todo.id }}" onclick="this.form.submit();" {% if todo.completed %}checked {% endif %}>
                         </div>
                     </form>
-                    <form method="POST" action="{{ url_for('main.delete_todo', todo_id=todo.id) }}">
+                    <form method="POST" action="{{ url_for('todo.delete_todo', todo_id=todo.id) }}">
                         <button type="submit" class="btn btn-sm">
                             <img src="{{ url_for('static', filename='images/icons8-trash.svg') }}" alt="delete">
                         </button>
                     </form>
-                    <form method="POST" action="{{ url_for('main.edit_todo', todo_id=todo.id) }}">
+                    <form method="POST" action="{{ url_for('todo.edit_todo', todo_id=todo.id) }}">
                         <button type="submit" class="btn btn-sm">
                             <img src="{{ url_for('static', filename='images/icons8-edit.svg') }}" alt="edit">
                         </button>
@@ -99,6 +99,6 @@
 
 
     <div class="plus-button-container">
-        <a href="{{ url_for('main.add_todo') }}" class="btn plus-button"><i class="bi bi-plus-lg"></i></a>
+        <a href="{{ url_for('todo.add_todo') }}" class="btn plus-button"><i class="bi bi-plus-lg"></i></a>
     </div>
 {% endblock %}
