--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -24,7 +24,7 @@
                 Welcome to Your Todo List Application</p>
             {% if current_user.is_authenticated %}
             <div class="d-inline-flex gap-2 mb-5">
-                <a class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" href="{{url_for('main.todos')}}">Todos</a>
+                <a class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" href="{{url_for('todo.todos')}}">Todos</a>
                 <a class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" href="{{url_for('note.notes')}}">Notes</a>
                 {% else %}
                 <a class="btn btn-1" href="{{ url_for('auth.login') }}">Login</a>
@@ -34,10 +34,5 @@
 
         </div>
         </div>
-        <!-- {% if current_user.is_authenticated%}
-        <div class="plus-button-container">
-            <a href="{{ url_for('main.add_todo') }}" class="btn plus-button"><i class="bi bi-plus-lg"></i></a>
-        </div>
-        {% endif %} -->
 
 {% endblock %}
