--- a/app/templates/main/navbar.html
+++ b/app/templates/main/navbar.html
@@ -18,10 +18,10 @@
             </li>
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('main.todos')}}">Todo 📃</a>
+                <a class="nav-link active" href="{{url_for('todo.todos')}}">Todo 📃</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('main.add_todo')}}"> Add Todo 📝</a>
+                <a class="nav-link active" href="{{url_for('todo.add_todo')}}"> Add Todo 📝</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="{{url_for('note.notes')}}">Notes </a>
