--- a/app/templates/todo/add_todo.html
+++ b/app/templates/todo/add_todo.html
@@ -6,7 +6,7 @@
     <div class="container d-flex justify-content-center align-items-center">
         <div>
             <h1 class="text-center">Todo List</h1>
-            <form method="POST" action="{{url_for('main.add_todo')}}">
+            <form method="POST" action="{{url_for('todo.add_todo')}}">
                 {{ form.hidden_tag() }}
                 <div class="mb-3">
                     {{ form.title.label }}
