--- a/app/templates/note/add_note.html
+++ b/app/templates/note/add_note.html
@@ -28,7 +28,7 @@
             {% endfor %}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary btn-1">Save</button>
         </div>
     </form>
 </div>
