--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,16 +2,16 @@
 
 {% block content %}
 
-{% for message in get_flashed_messages() %}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {% if 'delete' not in message %}
-            <strong>Hey {{ message }}</strong>
-        {% else %}
-            <strong>{{ message }}</strong>
-        {% endif %}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-{% endfor %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible animate__animated animate__bounceIn" role="alert">
+                <strong>{{ message }}</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 
     <div class="container">
         <div class="row justify-content-center">
