--- a/app/templates/main/navbar.html
+++ b/app/templates/main/navbar.html
@@ -1,12 +1,12 @@
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-body-tertiary" aria-label="Offcanvas navbar large">
+<nav class="navbar navbar-expand-lg navbar-dark " aria-label="Offcanvas navbar large">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for('main.index')}}">Flask TODO 📚</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Menu</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -30,7 +30,7 @@
                 <a class="nav-link active" href="{{url_for('note.add_note')}}">Add Notes </a>
               </li>
             <li class="nav-item">
-                <a class="btn btn-danger" href="{{url_for('auth.logout')}}">Logout </a>
+                <a class="btn btn-danger btn-2" href="{{url_for('auth.logout')}}">Logout </a>
               </li>
             {% else %}
             <li class="nav-item">
