--- a/app/templates/note/note.html
+++ b/app/templates/note/note.html
@@ -3,18 +3,22 @@
 {% block content %}
 
 <div class="container">
-    <h1>Note</h1>
     <div class="card mt-3">
         <div class="card-body">
-            <h5 class="card-title">Note #{{ note.id }}</h5>
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 14px;">
+                <h5 class="card-title fs-1 text-primary">{{ note.title }}</h5>
+                <p class="text-end mt-3 text-secondary">Created At: {{note.created_at.strftime('%d-%m-%Y') }}</p>
+            </div>
+            <hr>
             <!-- {% autoescape false %} -->
             <p class="card-text" style="font-family: Arial, Helvetica, sans-serif;">{{ note.content | safe }}</p>
             <!-- {% endautoescape %} -->
-            <a href="{{ url_for('note.notes') }}" class="btn btn-secondary">Back to Notes</a>
-            <a href="{{ url_for('note.edit_note', note_id=note.id) }}" class="btn btn-warning">Edit</a>
+            <a href="{{ url_for('note.notes') }}" class="btn btn-secondary gap-2">Back to Notes</a>
+            <a href="{{ url_for('note.edit_note', note_id=note.id) }}" class="btn btn-warning btn-4">Edit</a>
             <form method="POST" action="{{ url_for('note.delete_note', note_id=note.id) }}" style="display:inline;">
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger btn-2">Delete</button>
             </form>
+
         </div>
     </div>
 </div>
